# Foundry-OSS

./: .env.example  .git-blame-ignore-revs  .gitignore  .mcp.json  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  NOTICE  README.md  SECURITY.md  SELF-HOSTING.md  biome.json  commitlint.config.ts  lefthook.yml  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  release-please-config.json  skills-lock.json  tsconfig.json  vitest.config.ts  webreel.config.json
.claude/: settings.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: agent-sdk-runner.mjs
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/auth/: clerk.rs  keychain.rs  mod.rs
apps/desktop/src-tauri/src/cache/: schema.rs  sqlite.rs
apps/desktop/src-tauri/src/commands/: execution.rs  filesystem.rs  git.rs  ide.rs  keychain.rs  mod.rs  session.rs  streaming.rs  system.rs  types.rs  worktree.rs
apps/desktop/src-tauri/src/execution/: claude_cli.rs  claude_sdk.rs  engine.rs  hooks.rs  jsonl_parser.rs  mod.rs  pipeline.rs
apps/desktop/src-tauri/src/process/: manager.rs  mod.rs  monitor.rs  sandbox.rs
apps/desktop/src-tauri/src/runtime/: mod.rs
apps/desktop/src-tauri/src/streaming/: file_watcher.rs  log_buffer.rs  mod.rs  ws_server.rs
apps/desktop/src-tauri/src/sync/: batch_sender.rs  convex_client.rs  mod.rs  payloads.rs  session_sync.rs
convex/: ai.ts  (+77 more)
(+1284 files in other folders)
